webserver-deployment/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless-svc
  namespace: develop
  labels:
    app: nginx
spec:
  clusterIP: None
  ports:
    - name: nginx-ui
      port: 8081
      targetPort: 80
      protocol: TCP
  selector:
    app: nginx
